--- a/client/src/pages/Home/Home.module.css
+++ b/client/src/pages/Home/Home.module.css
@@ -1,8 +1,8 @@
-
 .text {
   font-size: 22px;
   line-height: 1.6;
   color: #c4c5c5;
+  margin-bottom: 30px;
 }
 .cardWrapper {
   display: flex;
@@ -12,3 +12,10 @@
   margin-top: 6rem;
 }
 
+.signinWrapper {
+  margin-top: 20px;
+}
+
+.hasInvite {
+  color: #0077ff;
+}
