[ADD] design part of voice room working on going

--- a/client/src/Components/Shared/Card/Card.module.css
+++ b/client/src/Components/Shared/Card/Card.module.css
@@ -5,9 +5,11 @@
   background: #1d1d1d;
   padding: 30px;
   border-radius: 20px;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-
 .headingWrapper {
   display: flex;
   align-items: center;
@@ -18,10 +20,4 @@
   font-size: 22px;
   font-weight: bold;
   margin-left: 10px;
-}
-
-.headingWrapper img {
-  width: 10%;
-  height: 10%;
-  max-width: 90%;
 }
