[ADD] frontend name field and image upload field done

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -47,3 +47,11 @@ body {
   height: auto;
   border-radius: 50%;
 }
+
+.cardWrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  min-height: calc(100vh - 140px);
+}
