[DONE] until frontend otp component design completed

--- a/frontend/src/pages/Home/Home.module.css
+++ b/frontend/src/pages/Home/Home.module.css
@@ -1,21 +1,23 @@
 .text {
-    font-size: 22px;
-    line-height: 1.6;
-    color: #c4c5c5;
-    margin-bottom: 30px;
+  font-size: 22px;
+  line-height: 1.6;
+  color: #c4c5c5;
+  margin: 0 auto;
+  margin-bottom: 30px;
+  text-align: center;
 }
 
 .cardWrapper {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 6rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 6rem;
 }
 
 .signinWrapper {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .hasInvite {
-    color: #0077ff;
+  color: #0077ff;
 }
