--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -29,6 +29,11 @@ img {
   height: auto;
 }
 
+button {
+  border: none;
+  outline: none;
+}
+
 body {
   background: #121212;
   font-family: "Nunito", sans-serif;
