--- a/frontend/src/Components/shared/Navigation/Navigation.module.css
+++ b/frontend/src/Components/shared/Navigation/Navigation.module.css
@@ -4,3 +4,21 @@
   align-items: center;
   justify-content: space-between;
 }
+
+.logoutButton {
+  cursor: pointer;
+  background: none;
+}
+
+.navRight {
+  display: flex;
+  align-items: center;
+}
+
+.avatar {
+  border-radius: 50%;
+  object-fit: cover;
+  border: 3px solid #0077ff;
+  margin: 0 20px;
+  margin-right: 10px;
+}
