[ROOM] working started and some of work finished

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,9 @@
 html {
-  box-sizing: border-box;
   font-size: 16px;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 body,
@@ -32,6 +35,8 @@ img {
 button {
   border: none;
   outline: none;
+  cursor: pointer;
+  font-weight: bold;
 }
 
 body {
